FireAlarmApplication.Web/mtg_debug_20260127_163128.txt

=== MTG FIRE DEBUG ===
Time: 2026-01-27 16:31:28
NetCDF: C:\Users\kubil\AppData\Local\Temp\dfcef9fa-f077-4510-891f-8d47f83cb1c9.nc

=== PYTHON STDERR (Debug Output) ===
  File "C:\Users\kubil\source\repos\FireAlarmApplication\FireAlarmApplication.Web\Scripts\parse_mtg_fire.py", line 32
    max_lat = float(parts[2])x""
                             ^
SyntaxError: invalid syntax


=== PYTHON STDOUT (JSON Output) ===


=== EXIT CODE ===
1
